--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,5 @@
-REACT_APP_API_URL=https://telemedicine-platform-production.up.railway.app/api
-REACT_APP_SOCKET_URL=https://telemedicine-platform-production.up.railway.app
+# REACT_APP_API_URL=https://telemedicine-platform-production.up.railway.app/api
+# REACT_APP_SOCKET_URL=https://telemedicine-platform-production.up.railway.app
+# REACT_APP_API_URL=https://telemedicine-platform-h2xc.onrender.com/api
+REACT_APP_API_URL=https://telemedicine-platform-h2xc.onrender.com/api
+REACT_APP_SOCKET_URL=https://telemedicine-platform-h2xc.onrender.com
